--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,40 @@
-# This .gitignore is appropriate for repositories deployed to GitHub Pages and using
-# a Gemfile as specified at https://github.com/github/pages-gem#conventional
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# Basic Jekyll gitignores (synchronize to Jekyll.gitignore)
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
+# Virtual environments
+.venv/
+env/
+venv/
+ENV/
 
-# Additional Ruby/bundler ignore for when you run: bundle install
-/vendor
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
 
-# Specific ignore for GitHub Pages
-# GitHub Pages will always use its own deployed version of pages-gem 
-# This means GitHub Pages will NOT use your Gemfile.lock and therefore it is
-# counterproductive to check this file into the repository.
-# Details at https://github.com/github/pages-gem/issues/768
-Gemfile.lock
+# Logs
+*.log
+logs/
+*.sqlite3
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE / Editor settings
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Python cache
+*.pyc
+
+# CSV or large data files (optional if you don't want to push your dataset)
+*.csv
+*.xlsx
+
+# Secrets / environment variables
+.env
